// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code-toggle Java preferred (not interactive) renders as expected 1`] = `
<div
  className="relative "
>
  <div
    aria-required={true}
    className="toggle-group round-full bg-blue py3 px3"
    data-testid="three-input"
    id="three"
    role="radiogroup"
  >
    <label
      className="toggle-container "
    >
      <input
        autoFocus={false}
        checked={false}
        data-testid="three-0-input"
        name="three"
        onChange={[Function]}
        type="radio"
        value="javascript"
      />
      <div
        className="txt-s py3 toggle--white toggle--active-blue toggle"
      >
        JavaScript
      </div>
    </label>
    <label
      className="toggle-container "
    >
      <input
        autoFocus={false}
        checked={true}
        data-testid="three-1-input"
        name="three"
        onChange={[Function]}
        type="radio"
        value="java"
      />
      <div
        className="txt-s py3 toggle--white toggle--active-blue toggle"
      >
        Java
      </div>
    </label>
    <label
      className="toggle-container "
    >
      <input
        autoFocus={false}
        checked={false}
        data-testid="three-2-input"
        name="three"
        onChange={[Function]}
        type="radio"
        value="swift"
      />
      <div
        className="txt-s py3 toggle--white toggle--active-blue toggle"
      >
        Swift
      </div>
    </label>
    <label
      className="toggle-container "
    >
      <input
        autoFocus={false}
        checked={false}
        data-testid="three-3-input"
        name="three"
        onChange={[Function]}
        type="radio"
        value="objectiveC"
      />
      <div
        className="txt-s py3 toggle--white toggle--active-blue toggle"
      >
        Objective-C
      </div>
    </label>
  </div>
  <div
    role="alert"
  />
</div>
`;

exports[`code-toggle Objective C preferred (not interactive) renders as expected 1`] = `
<div
  className="relative "
>
  <div
    aria-required={true}
    className="toggle-group round-full bg-blue py3 px3"
    data-testid="two-input"
    id="two"
    role="radiogroup"
  >
    <label
      className="toggle-container "
    >
      <input
        autoFocus={false}
        checked={false}
        data-testid="two-0-input"
        name="two"
        onChange={[Function]}
        type="radio"
        value="swift"
      />
      <div
        className="txt-s py3 toggle--white toggle--active-blue toggle"
      >
        Swift
      </div>
    </label>
    <label
      className="toggle-container "
    >
      <input
        autoFocus={false}
        checked={true}
        data-testid="two-1-input"
        name="two"
        onChange={[Function]}
        type="radio"
        value="objectiveC"
      />
      <div
        className="txt-s py3 toggle--white toggle--active-blue toggle"
      >
        Objective-C
      </div>
    </label>
  </div>
  <div
    role="alert"
  />
</div>
`;

exports[`code-toggle Swift preferred (interactive) renders as expected 1`] = `
<div
  className="relative "
>
  <div
    aria-required={true}
    className="toggle-group round-full bg-blue py3 px3"
    data-testid="one-input"
    id="one"
    role="radiogroup"
  >
    <label
      className="toggle-container "
    >
      <input
        autoFocus={false}
        checked={true}
        data-testid="one-0-input"
        name="one"
        onChange={[Function]}
        type="radio"
        value="swift"
      />
      <div
        className="txt-s py3 toggle--white toggle--active-blue toggle"
      >
        Swift
      </div>
    </label>
    <label
      className="toggle-container "
    >
      <input
        autoFocus={false}
        checked={false}
        data-testid="one-1-input"
        name="one"
        onChange={[Function]}
        type="radio"
        value="objectiveC"
      />
      <div
        className="txt-s py3 toggle--white toggle--active-blue toggle"
      >
        Objective-C
      </div>
    </label>
  </div>
  <div
    role="alert"
  />
</div>
`;
